--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "string-strip-html": "^6.3.0",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.29",
+    "typeorm-naming-strategies": "^2.0.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.5"
   }
