--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "scripts": {
+    "test": "jest --passWithNoTests",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules src/app.ts",
     "start": "node ./build/src/app.js",
     "build": "rimraf ./build && tsc",
-    "postinstall": "tsc"
+    "postinstall": "tsc", 
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/ormconfig.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.20",
     "@types/joi": "^14.3.4",
     "@typescript-eslint/eslint-plugin": "^4.8.0",
     "@typescript-eslint/parser": "^4.8.0",
     "eslint": "^7.13.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
@@ -36,6 +41,7 @@
     "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "string-strip-html": "^6.3.0",
+    "ts-custom-error": "^3.2.0",
     "ts-node": "^9.1.1",
     "typeorm": "^0.2.29",
     "typeorm-naming-strategies": "^2.0.0",
